--- a/src/style.css
+++ b/src/style.css
@@ -139,6 +139,16 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   line-height: 1.75rem;
 }
 
+select{
+  appearance:none;
+  -webkit-appearance: none;
+  background-position-x: calc(100% - 12px);
+  background-position-y: center;
+  background-repeat: no-repeat;
+  background-image: url( "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke-width='1.5' stroke='currentColor' viewBox='0 0 24 24'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19.5 8.25l-7.5 7.5-7.5-7.5'/%3E%3C/svg%3E" );
+  background-size: 16px;
+}
+
 #app {
   width: 100vw;
   min-height: 100vh;
